namespace Helpers.Managers
{
    static class AnimationsName
    {
        public static string ATTACK = "Attack";
        public static string ATTACK_RANGE = "RangeAttack";
        public static string CANCEL = "Cancel";
        public static string ATTACK_MULTY = "AttackMulty";
        public static string DEATH = "Dead";
        public static string REVIVE = "Revive";
        public static string WEAPON_SWAP = "WeaponSwap";
    }
}
